# pdf-rag

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: api-reference.md  architecture.md  configuration.md  impl-docker-and-mcp.md  improvements.md  index.md  pipeline-deep-dive.md  roadmap.md  testing.md  troubleshooting.md
src/: adapters.py  api.py  chunking.py  config.py  config_cli.py  embeddings.py  extraction.py  ingest.py  mcp_server.py  qdrant_store.py  reranker.py  retriever.py  utils.py
tests/: conftest.py
tests/eval/: benchmark_labels.json  compare_to_baseline.py  conftest.py  convert_kaggle_dataset.py  eval-baseline.json  generate_report.py  gutenberg_corpus.py  labels_gutenberg.json  test_e2e_pipeline.py  test_gutenberg_eval.py
tests/eval/benchmark_docs/: doc_07.txt  doc_08.txt  doc_09.txt  doc_10.txt  doc_11.txt  doc_12.txt  doc_13.txt  doc_14.txt  doc_15.txt  doc_16.txt  doc_17.txt  doc_18.txt  doc_19.txt
tests/integration/: test_api.py  test_retrieval.py
tests/unit/: test_chapter_detection.py  test_config.py  test_extraction.py  test_ingest.py  test_retriever.py  test_utils.py
