[project]
name = "doc-rag"
version = "0.1.0"
description = "Local RAG system for PDF documents"
requires-python = ">=3.10"
dependencies = [
    "pymupdf",
    "sentence-transformers",
    "qdrant-client",
    "fastapi",
    "uvicorn",
    "fastmcp",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mkdocs",
    "mkdocs-material",
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "pytest-html",
]

[project.scripts]
doc-rag-ingest = "src.ingest:main"
doc-rag-serve = "src.api:main"
doc-rag-mcp = "src.mcp_server:main"
doc-rag-config = "src.config_cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: fast, no I/O (run every save)",
    "integration: uses stubbed infrastructure (run on PR)",
    "eval: slow, uses real models (run nightly)",
    "rerank: cross-encoder re-ranking tests (separate CI job)",
]
addopts = "-v --tb=short"
